[gd_scene load_steps=3 format=1]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]

[node name="Main" type="Node"]

script/script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

[node name="gem_container" type="Node" parent="."]

[node name="HUD" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="score_label" type="Label" parent="HUD"]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 54.0
margin/top = 21.0
margin/right = 164.0
margin/bottom = 66.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="time_label" type="Label" parent="HUD"]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 929.0
margin/top = 14.0
margin/right = 1039.0
margin/bottom = 59.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="game_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]


